AC_PREREQ(2.57)
AC_INIT([OOH323C],[0.9.0],[Objective Systems <support@obj-sys.com>],[ooh323c])
PACKAGE=ooh323c
VERSION=0.9.0

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AC_CONFIG_SRCDIR([src/context.c])
AM_CONFIG_HEADER(config.h)
dnl should include it in src files before using here

OOH323CDIR=`pwd`
AC_SUBST(OOH323CDIR)

if test "x$prefix" = "xNONE"; then
   INSTALLPREFIX="."
else
   INSTALLPREFIX="${prefix}"
fi


AC_SUBST(INSTALLPREFIX)
OOH323CFLAGS="-DGNU -D_GNU_SOURCE -D_REENTRANT -DUSE_THREADS -Wall"
AC_SUBST(OOH323CFLAGS)


AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LIBTOOL (/usr/bin/libtool)
AC_LANG_C

AC_HEADER_STDC
AC_CHECK_HEADERS([pthread.h arpa/inet.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/socket.h unistd.h sys/ioctl.h malloc.h])

OOINCLUDEMEDIA=yes
AC_CHECK_HEADERS(linux/soundcard.h, [], [OOINCLUDEMEDIA=no])

OOMEDIADIR="media"
OOTESTSDIRS="simple receiver player"
if test "x$OOINCLUDEMEDIA" = xno; then
   AC_MSG_WARN([***Media Library Requires "linux/soundcard.h.***
               ***Will skip building media library and examples***])
   OOMEDIADIR=""
   OOTESTSDIRS=""
fi
AC_SUBST(OOMEDIADIR)
AC_SUBST(OOTESTSDIRS)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([gettimeofday inet_ntoa memchr memset select socket gethostbyname gethostname pipe ioctl])


dnl AC_CONFIG_FILES([src/Makefile media/Makefile tests/simple/Makefile tests/player/Makefile tests/receiver/Makefile])
dnl AC_OUTPUT
AC_OUTPUT(Makefile src/Makefile media/Makefile tests/Makefile tests/simple/Makefile tests/player/Makefile tests/receiver/Makefile tests/chansetup/Makefile)
dnl AC_OUTPUT(media/Makefile)
